新需求前提交git